...
                                      Icons.add_a_photo,
                                      size: 18,
                                      color: theme.primaryColor,
                                    ),
                                    const SizedBox(width: 8),
                                    Text(
                                      'Take Photo',
                                      style: TextStyle(
                                      fontSize: 16,
                                      fontWeight: FontWeight.w500,
                                      color: Theme.of(context).brightness == Brightness.dark 
                                        ? Theme.of(context).colorScheme.primary 
                                        : theme.primaryColor,
...
                          const SizedBox(height: 24),

                          // Form Fields
                          TextFormField(
                            controller: _pickupTimesController,
                            decoration: InputDecoration(
                              labelText: 'Pickup Times',
                              hintText:
                                  'e.g., Weekdays 5-8pm, Weekends 9am-6pm',
                              prefixIcon: const Icon(Icons.access_time),
                              border: OutlineInputBorder(
                                borderRadius: BorderRadius.circular(12),
                              ),
...
                          const SizedBox(height: 20),

                          TextFormField(
                            controller: _pickupInstructionsController,
                            maxLines: 3,
                            decoration: InputDecoration(
                              labelText: 'Pickup Instructions',
                              hintText:
                                  'e.g., Leave at the front door, call me when you arrive',
                              prefixIcon: const Padding(
                                padding: EdgeInsets.only(bottom: 64),
                                child: Icon(Icons.info_outline),
                              ),
...
                              shape: RoundedRectangleBorder(
                                borderRadius: BorderRadius.circular(12),
                              ),
                              elevation: 2,
                            ),
                            child: const Text(
                              'Submit Donation',
                              style: TextStyle(
                                fontSize: 16,
                                fontWeight: FontWeight.bold,
                              ),
                            ),
                          ),
...
