...

      foodItemDoc['donorId'] = donorId;
      foodItemDoc['donorName'] = donorName;
      foodItemDoc['donorEmail'] = donorEmail;
      foodItemDoc['donated'] = true;
      foodItemDoc['donatedAt'] = Timestamp.now();
      foodItemDoc['status'] = 'Available';
      foodItemDoc['donationId'] = donationId;
      foodItemDoc['pickupTimes'] = formData['pickupTimes'] ?? '';
      foodItemDoc['pickupInstructions'] = formData['pickupInstructions'] ?? '';

      // If location exists in the user's document, use that, otherwise use GeoLocator location
      GeoPoint userLocation;
...
      // Remove the item from the foodItems collection through repository
      await _donationRepository.removeFoodItem(id);


      // Show a success message
      ScaffoldMessenger.of(context).showSnackBar(
        SnackBar(content: Text("Donation added successfully.")),
      );
    } catch (e) {
      print('Error donating food item: $e');
      ScaffoldMessenger.of(context).showSnackBar(
        SnackBar(content: Text("Failed to donate item: $e")),
      );
...
